--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -21,8 +21,9 @@
 <link rel="import" href="rpg-auth-button.html">
 <link rel="import" href="rpg-home.html">
 
-<link rel="lazy-import" href="rpg-characters.html?v=0.4">
-<link rel="lazy-import" href="rpg-character-sheet.html">
+<link rel="lazy-import" href="rpg-characters.html?v=0.5">
+<link rel="lazy-import" href="rpg-character-sheet.html?v=0.1">
+<link rel="lazy-import" href="rpg-character.html?v=0.1">
 <link rel="lazy-import" href="rpg-scenes.html">
 <link rel="lazy-import" href="rpg-scene.html">
 
