--- a/src/rpg-characters.html
+++ b/src/rpg-characters.html
@@ -5,8 +5,8 @@
 <link rel="import" href="../bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="../bower_components/neon-animation/web-animations.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
-<link rel="import" href="rpg-character.html">
-<link rel="import" href="rpg-character-sheet.html">
+<link rel="import" href="rpg-character.html?v=0.1">
+<link rel="import" href="rpg-character-sheet.html?v=0.1">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="rpg-characters">
